remove Reason property